# lipl-storage-wasi

./: .gitignore  Cargo.toml  LICENSE  README.md  wkg.toml
crates/console-logger/: Cargo.toml  wkg.toml
crates/console-logger/src/: lib.rs
crates/console-logger/wit/: deps.toml  world.wit
crates/lipl-run/: Cargo.toml
crates/lipl-run/src/: lib.rs
crates/lipl-storage-fs-wasi/: Cargo.toml
crates/lipl-storage-fs-wasi/src/: constant.rs  error.rs  lib.rs  lib_ext.rs  part.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs
src/: lib.rs  part.rs
wit/: deps.toml  world.wit
