[package]
name = "console-logger"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = { version = "0.4.45", default-features = false, features = ["std"] }
time = "0.3.54"
wit-bindgen = { version = "0.59.0", features = ["bitflags", "async-spawn", "futures-stream"] }
