[package]
name = "lipl-storage-fs-wasi"
version = "0.1.8"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
wit-bindgen = { version = "0.59.0", features = ["bitflags", "futures-stream", "async-spawn", "inter-task-wakeup"] }
